{
    "version": 1,
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "41cd9332-05ae-46b3-b9b4-c6dc9866f54a",
            "actions": [
                {
                    "name": "PlayerUp",
                    "type": "Button",
                    "id": "ed22aee6-826a-4e43-98b0-6e67ac90b4eb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerRight",
                    "type": "Button",
                    "id": "eb6f1d5b-46b3-426a-b4ca-b222f07c3c08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerLeft",
                    "type": "Button",
                    "id": "b2e56d0d-bc73-4cef-a1c8-2871801f3784",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6256edc3-7e12-4bb9-a442-164be30ef29d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05de2010-7165-4b4d-bdbb-7e2bc15a39f1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1a2e098-ff6c-4f93-96e6-33da652cc512",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7538c9a-6d21-4ffd-8726-a1ad64529c94",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed3c49b4-05c0-4fd0-9437-2d8d3e353e6c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28f6a9a1-d2f9-4516-a867-76044eff1e46",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}